--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   font-size: 30px;
   font-weight: bold;
   color: #333;
-  font-family: fantasy, copperplate, sans-serif;
+ font-family: 'Orbitron', sans-serif;
 }
 
 /* Navigation Content */
